--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -36,8 +36,10 @@ $nav-width:         200px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "base",
-        "layout",
-        "syntax-highlighting",
-        "kc"
+    "base",
+    "layout",
+    "syntax-highlighting",
+    "kc",
+    "game",
+    "navbar"
 ;
