--- a/web/_sass/_layout.scss
+++ b/web/_sass/_layout.scss
@@ -1,6 +1,17 @@
-/**
- * Site header
- */
+table {
+    border-collapse: collapse;
+    border-spacing: 5;
+    border: 1px solid black
+}
+
+th {
+    border: 1px solid #000000
+}
+
+td {
+    border: 1px solid #000000
+}
+
 .site-header {
     position: fixed;
     z-index: 2;
