Some more webpage work

--- a/web/_includes/nav.html
+++ b/web/_includes/nav.html
@@ -1,4 +1,7 @@
 <ul class="navigation">
+    <li class="nav-item">
+        <a href="index.html">Back To Emulator</a>
+    </li>
     {% for page in site.pages %}
         {% if page.title %}
         <li class="nav-item">
