Wrote the hardware reference web page

--- a/web/_includes/nav.html
+++ b/web/_includes/nav.html
@@ -1,6 +1,6 @@
 <ul class="navigation">
     <li class="nav-item">
-        <a href="index.html">Back To Emulator</a>
+        <a href="index.html">Back To The Emulator</a>
     </li>
     {% for page in site.pages %}
         {% if page.title %}
