Started to move most inline functions into source files

--- a/web/_layouts/mainpage.html
+++ b/web/_layouts/mainpage.html
@@ -10,7 +10,7 @@
     </div>
 
     <script type="text/javascript" src="emsc.js"></script>
-    <script async type="text/javascript" src="yakc.js"></script>
+    <script async type="text/javascript" src="yakcapp.js"></script>
 
   </body>
 </html>
