--- a/web/_sass/_navbar.scss
+++ b/web/_sass/_navbar.scss
@@ -4,6 +4,7 @@
     margin-top: 8px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
     height: auto;
     background-color: rgb(254, 233, 80);
     outline: black solid thin;
