Webpage: generally use 'soft fullscreen'

--- a/web/_includes/main-nav-bar.html
+++ b/web/_includes/main-nav-bar.html
@@ -3,7 +3,7 @@
 <ul class="main-nav-list">
     <li class="main-nav-item"><a class="main-nav-link" style="width:150px" href="p010_kc85.html" target="_blank">about</a></li>
     <li class="main-nav-item"><a class="main-nav-link" style="width:150px" href="http://github.com/floooh/yakc" target="_blank">github</a></li>
-    <li class="main-nav-item"><a class="main-nav-link" style="width:150px" onclick="callAsEventHandler('enter_fullscreen')" href="javascript:void(0);">fullscreen</a></li>
+    <li class="main-nav-item"><a class="main-nav-link" style="width:150px" onclick="callAsEventHandler('enter_soft_fullscreen')" href="javascript:void(0);">fullscreen</a></li>
     <div style="clear:both"></div>
 </ul>
 </div>
