--- a/web/_layouts/mainpage.html
+++ b/web/_layouts/mainpage.html
@@ -2,7 +2,7 @@
 <html>
   {% include head.html %}
   <body>
-    {% include main-header.html %}
+    {% include main-header-asmjs.html %}
     {% include main-nav-bar.html %}
 
     <div class="game-border">
