--- a/web/_includes/main-nav-bar.html
+++ b/web/_includes/main-nav-bar.html
@@ -1,12 +1,10 @@
 <!-- the main page horizontal menu bar -->
-<div class="main-nav-bar" style="width:500px">
-<ul class="main-nav-list">
-    <li class="main-nav-item"><a class="main-nav-link" style="width:100px" href="p010_kc85.html" target="_blank">about</a></li>
-    <li class="main-nav-item"><a class="main-nav-link" style="width:100px" href="index.html">asm.js</a></li>
-    <li class="main-nav-item"><a class="main-nav-link" style="width:100px" href="index_wasm.html">wasm</a></li>
-    <li class="main-nav-item"><a class="main-nav-link" style="width:100px" href="http://github.com/floooh/yakc" target="_blank">github</a></li>
-    <li class="main-nav-item"><a class="main-nav-link" style="width:100px" onclick="callAsEventHandler('enter_soft_fullscreen')" href="javascript:void(0);">fullscreen</a></li>
-    <div style="clear:both"></div>
-</ul>
+<div class="main-nav-bar" id="main-nav-bar">
+    <ul class="main-nav-list">
+        <li class="main-nav-item"><a class="main-nav-link" href="p010_kc85.html" target="_blank">about</a></li>
+        <li class="main-nav-item"><a class="main-nav-link" href="index.html">asm.js</a></li>
+        <li class="main-nav-item"><a class="main-nav-link" href="index_wasm.html">wasm</a></li>
+        <li class="main-nav-item"><a class="main-nav-link" href="http://github.com/floooh/yakc" target="_blank">github</a></li>
+    </ul>
 </div>
 
