--- a/web/_sass/_game.scss
+++ b/web/_sass/_game.scss
@@ -1,17 +1,27 @@
 // style definitions for emscripten canvas
 
 .game-border {
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
     display: block;
 }
 /* the emscripten canvas must not have any border or padding, or mouse coords will be wrong */
 .game {
-    padding: 0px;
-    margin-left: auto;
-    margin-right: auto;
-    border: 0px none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    border: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     display: block;
+    background-color: #222222;
     image-rendering: optimizeSpeed;
     image-rendering: -moz-crisp-edges;
     image-rendering: -o-crisp-edges;
@@ -20,9 +30,5 @@
     image-rendering: crisp-edges;
     image-rendering: pixelated;
     -ms-interpolation-mode: nearest-neighbor;
-}
-.game:-webkit-full-screen {
-    width: 100%;
-    height: 100%;
 }
 
