--- a/web/_layouts/default.html
+++ b/web/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    {% include nav.html %}
+    {% include about-nav.html %}
 
     <div class="page-content">
         {{ content }}
