--- a/web/_layouts/mainpage_wasm.html
+++ b/web/_layouts/mainpage_wasm.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
+{% assign wasm = true %}
 <html>
   {% include head.html %}
   <body>
     <div id="nav">
-      {% include hamburger.html %}
-      {% include main-nav-bar.html %}
+      {% include nav.html %}
     </div>
     <div class="game-border" id="game-border">
       <canvas class="game" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
     </div>
-
     <script type="text/javascript" src="emsc.js"></script>
     <script>
         var xhr = new XMLHttpRequest();
