--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -3,8 +3,6 @@
 ---
 @charset "utf-8";
 
-
-
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
@@ -41,6 +39,5 @@ $nav-width:         200px;
     "syntax-highlighting",
     "kc",
     "game",
-    "navbar",
-    "hamburger"
+    "navbar"
 ;
