Webpage UI tweaks

--- a/web/_includes/systems-panel.html
+++ b/web/_includes/systems-panel.html
@@ -16,26 +16,32 @@
             <li class="panel-list-item" onclick="boot_system(this, 'kc85_3 caos_3_4')">KC 85/3 (HC-CAOS 3.4i)</li>
             <li class="panel-list-item" onclick="boot_system(this, 'kc85_4 caos_4_2')">KC 85/4 (KC-CAOS 4.2)</li>
             <li class="panel-list-item" onclick="boot_system(this, 'kccompact none')">KC Compact (CPC clone)</li>
+            <li class="panel-list-item" onclick="show_companies()">Back...</li>
         </ul>
         <ul class="panel-list hidden" id="Robotron Dresden">
             <li class="panel-list-item" onclick="boot_system(this, 'z9001 none')">Z9001 (32 KB)</li>
             <li class="panel-list-item" onclick="boot_system(this, 'kc87 none')">KC 87 (48 KB)</li>
+            <li class="panel-list-item" onclick="show_companies()">Back...</li>
         </ul>
         <ul class="panel-list hidden" id="Robotron Riesa">
             <li class="panel-list-item" onclick="boot_system(this, 'z1013_01 none')">Z1013.01 (1 MHz, 16 KB)</li>
             <li class="panel-list-item" onclick="boot_system(this, 'z1013_16 none')">Z1013.16 (2 MHz, 16 KB)</li>
             <li class="panel-list-item" onclick="boot_system(this, 'z1013_64 none')">Z1013.64 (2 MHz, 64 KB)</li>
+            <li class="panel-list-item" onclick="show_companies()">Back...</li>
         </ul>
         <ul class="panel-list hidden" id="Sinclair">
             <li class="panel-list-item" onclick="boot_system(this, 'zxspectrum48k none')">ZX Spectrum 48K</li>
             <li class="panel-list-item" onclick="boot_system(this, 'zxspectrum128k none')">ZX Spectrum 128K</li>
+            <li class="panel-list-item" onclick="show_companies()">Back...</li>
         </ul>
         <ul class="panel-list hidden" id="Amstrad">
             <li class="panel-list-item" onclick="boot_system(this, 'cpc464 none')">CPC 464</li>
             <li class="panel-list-item" onclick="boot_system(this, 'cpc6128 none')">CPC 6128</li>
+            <li class="panel-list-item" onclick="show_companies()">Back...</li>
         </ul>
         <ul class="panel-list hidden" id="Acorn">
             <li class="panel-list-item" onclick="boot_system(this, 'acorn_atom none')">Atom</li>
+            <li class="panel-list-item" onclick="show_companies()">Back...</li>
         </ul>
     </div>
 </div>
