--- a/web/_includes/systems-panel.html
+++ b/web/_includes/systems-panel.html
@@ -2,21 +2,21 @@
     <div class="panel-title">Boot To System</div>
     <div class="panel-content" id="systems_panel_container">
         <ul class="panel-list" id="systems">
-            <li class="panel-list-item mpm" onclick="boot_system(this, 'kc85_2 caos_hc900')">HC-900</li>
-            <li class="panel-list-item mpm" onclick="boot_system(this, 'kc85_2 caos_2_2')">KC 85/2</li>
-            <li class="panel-list-item mpm" onclick="boot_system(this, 'kc85_3 caos_3_1')">KC 85/3</li>
-            <li class="panel-list-item mpm" onclick="boot_system(this, 'kc85_4 caos_4_2')">KC 85/4</li>
-            <li class="panel-list-item mpm" onclick="boot_system(this, 'kccompact none')">KC Compact</li>
-            <li class="panel-list-item robotron-dresden" onclick="boot_system(this, 'z9001 none')">Z9001</li>
-            <li class="panel-list-item robotron-dresden" onclick="boot_system(this, 'kc87 none')">KC 87</li>
-            <li class="panel-list-item robotron-riesa" onclick="boot_system(this, 'z1013_01 none')">Z1013.01</li>
-            <li class="panel-list-item robotron-riesa" onclick="boot_system(this, 'z1013_16 none')">Z1013.16</li>
-            <li class="panel-list-item robotron-riesa" onclick="boot_system(this, 'z1013_64 none')">Z1013.64</li>
-            <li class="panel-list-item sinclar" onclick="boot_system(this, 'zxspectrum48k none')">Spectrum 48K</li>
-            <li class="panel-list-item sinclar" onclick="boot_system(this, 'zxspectrum128k none')">Spectrum 128K</li>
-            <li class="panel-list-item amstrad" onclick="boot_system(this, 'cpc464 none')">CPC 464</li>
-            <li class="panel-list-item amstrad" onclick="boot_system(this, 'cpc6128 none')">CPC 6128</li>
-            <li class="panel-list-item acorn" onclick="boot_system(this, 'acorn_atom none')">Acorn Atom</li>
+            <li class="panel-list-item mpm" onclick="boot_system(this,'kc85_2','caos_hc900');">HC-900</li>
+            <li class="panel-list-item mpm" onclick="boot_system(this,'kc85_2','caos_2_2')">KC 85/2</li>
+            <li class="panel-list-item mpm" onclick="boot_system(this,'kc85_3','caos_3_1')">KC 85/3</li>
+            <li class="panel-list-item mpm" onclick="boot_system(this,'kc85_4','caos_4_2')">KC 85/4</li>
+            <li class="panel-list-item mpm" onclick="boot_system(this,'kccompact','none')">KC Compact</li>
+            <li class="panel-list-item robotron-dresden" onclick="boot_system(this,'z9001','none')">Z9001</li>
+            <li class="panel-list-item robotron-dresden" onclick="boot_system(this,'kc87','none')">KC 87</li>
+            <li class="panel-list-item robotron-riesa" onclick="boot_system(this,'z1013_01','none')">Z1013.01</li>
+            <li class="panel-list-item robotron-riesa" onclick="boot_system(this,'z1013_16','none')">Z1013.16</li>
+            <li class="panel-list-item robotron-riesa" onclick="boot_system(this,'z1013_64','none')">Z1013.64</li>
+            <li class="panel-list-item sinclar" onclick="boot_system(this,'zxspectrum48k','none')">Spectrum 48K</li>
+            <li class="panel-list-item sinclar" onclick="boot_system(this,'zxspectrum128k','none')">Spectrum 128K</li>
+            <li class="panel-list-item amstrad" onclick="boot_system(this,'cpc464','none')">CPC 464</li>
+            <li class="panel-list-item amstrad" onclick="boot_system(this,'cpc6128','none')">CPC 6128</li>
+            <li class="panel-list-item acorn" onclick="boot_system(this,'acorn_atom','none')">Acorn Atom</li>
         </ul>
     </div>
 </div>
