webpage cleanup, separated about and emu pages

--- a/web/_includes/systems-panel.html
+++ b/web/_includes/systems-panel.html
@@ -1,5 +1,4 @@
 <div class="panel hidden" id="systems_panel">
-    <div class="panel-title">Boot To System</div>
     <div class="panel-content" id="systems_panel_container">
         <ul class="panel-list" id="systems">
             <li class="panel-list-item mpm" onclick="boot_system(this,'kc85_2','caos_hc900');">HC-900</li>
@@ -12,8 +11,8 @@
             <li class="panel-list-item robotron-riesa" onclick="boot_system(this,'z1013_01','none')">Z1013.01</li>
             <li class="panel-list-item robotron-riesa" onclick="boot_system(this,'z1013_16','none')">Z1013.16</li>
             <li class="panel-list-item robotron-riesa" onclick="boot_system(this,'z1013_64','none')">Z1013.64</li>
-            <li class="panel-list-item sinclar" onclick="boot_system(this,'zxspectrum48k','none')">Spectrum 48K</li>
-            <li class="panel-list-item sinclar" onclick="boot_system(this,'zxspectrum128k','none')">Spectrum 128K</li>
+            <li class="panel-list-item sinclair" onclick="boot_system(this,'zxspectrum48k','none')">Spectrum 48K</li>
+            <li class="panel-list-item sinclair" onclick="boot_system(this,'zxspectrum128k','none')">Spectrum 128K</li>
             <li class="panel-list-item amstrad" onclick="boot_system(this,'cpc464','none')">CPC 464</li>
             <li class="panel-list-item amstrad" onclick="boot_system(this,'cpc6128','none')">CPC 6128</li>
             <li class="panel-list-item acorn" onclick="boot_system(this,'acorn_atom','none')">Acorn Atom</li>
