--- a/web/_layouts/mainpage.html
+++ b/web/_layouts/mainpage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}
+  {% include emu-head.html %}
   <body>
     {% include nav.html %}
     {% include systems-panel.html %}
