--- a/web/_sass/about/_syntax-highlighting.scss
+++ b/web/_sass/about/_syntax-highlighting.scss
@@ -3,7 +3,7 @@
  */
 .highlight {
     background-color: #111;
-    @extend %vertical-rhythm;
+    //@extend %vertical-rhythm;
 
     .c     { color: #998; font-style: italic } // Comment
     .err   { color: #a61717; background-color: #e3d2d2 } // Error
