--- a/web/css/about.scss
+++ b/web/css/about.scss
@@ -1,5 +1,4 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
 
@@ -31,16 +30,11 @@ $quote-text-color:  #666666;
 $code-background-color: #eeeeee;
 
 $nav-width:         200px;
-$ui-background-color: #FF3D00;
-$ui-color: #EEEEEE;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-    "base",
-    "layout",
-    "syntax-highlighting",
-    "kc",
-    "game",
-    "navbar",
-    "ui"
+    "about/base",
+    "about/layout",
+    "about/syntax-highlighting",
+    "about/kc"
 ;
