new web ui fairly complete now

--- a/web/_includes/systems-panel.html
+++ b/web/_includes/systems-panel.html
@@ -1,6 +1,7 @@
 <div class="panel hidden" id="systems_panel">
     <div class="panel-content" id="systems_panel_container">
         <ul class="panel-list" id="systems">
+            <li class="panel-list-item" onclick="toggle_systems_panel();">Back...</li>
             <li class="panel-list-item mpm" onclick="boot_system(this,'kc85_2','caos_hc900');">HC-900</li>
             <li class="panel-list-item mpm" onclick="boot_system(this,'kc85_2','caos_2_2')">KC 85/2</li>
             <li class="panel-list-item mpm" onclick="boot_system(this,'kc85_3','caos_3_1')">KC 85/3</li>
