--- a/web/_includes/nav.html
+++ b/web/_includes/nav.html
@@ -7,22 +7,16 @@
     <div class="main-nav-bar" id="main-nav-bar">
         <ul class="main-nav-list">
             <li class="main-nav-item">
-                <div class="main-nav-link" onclick="nav_toggle();yakc_toggle_ui();">toggle ui (tab)</div> 
+                <div class="main-nav-link" onclick="nav_toggle();toggle_systems_panel();">system...</div>
             </li>
             <li class="main-nav-item">
-                <div class="main-nav-link" onclick="nav_toggle();toggle_systems_panel();">switch system...</div>
+                <div class="main-nav-link" onclick="nav_toggle();yakc_power();">cold boot</div>
             </li>
             <li class="main-nav-item">
-                <div class="main-nav-link" onclick="nav_toggle();yakc_power();">power cycle</div>
+                <div class="main-nav-link" onclick="nav_toggle();yakc_reset();">warm boot</div>
             </li>
             <li class="main-nav-item">
-                <div class="main-nav-link" onclick="nav_toggle();yakc_reset();">reset</div>
-            </li>
-            <li class="main-nav-item">
-                <div class="main-nav-link" onclick="nav_toggle();yakc_toggle_keyboard();">toggle keyboard</div> 
-            </li>
-            <li class="main-nav-item">
-                <div class="main-nav-link" onclick="nav_toggle();yakc_toggle_joystick();">toggle joystick</div> 
+                <div class="main-nav-link" onclick="nav_toggle();toggle_quickload_panel();">quickload...</div>
             </li>
             {% if page.wasm == true %}
             <li class="main-nav-item">
