--- a/web/_sass/emu/_ui.scss
+++ b/web/_sass/emu/_ui.scss
@@ -1,3 +1,32 @@
+.floating-bottom {
+    position: absolute;
+    left: 10px;
+    bottom: 0;
+    background-color: transparent;
+    z-index: 1;
+    cursor: default;
+}
+
+.floating-button {
+    background-color: $grey-color-dark;
+    opacity: 0.5;
+    min-width: 25px;
+    display: block;
+    cursor: pointer;
+    padding: 5px;
+    margin: 2px;
+    margin-bottom: 5px;
+    border-radius: 3px;
+    font-family: "Arial", Gadget, sans-serif;
+    font-size: 10px;    
+    color: white;
+    text-align: center;
+}
+
+.floating-button.enabled {
+    background-color: #006600;
+}
+
 .panel {
     position: absolute;
     background-color: transparent; 
@@ -7,6 +36,7 @@
     height: 50%;
     margin: 0 auto;
     z-index: 1;
+    cursor: default;
 }
 .panel.hidden {
     display: none;
@@ -29,6 +59,7 @@
 }
 
 .panel-list-item {
+    background-color: $ui-background-color;
     display: inline-block;
     cursor: pointer;
     padding: 5px;
@@ -39,6 +70,9 @@
     font-size: 12px;    
     color: $ui-text-color;
     text-align: center;
+}
+.panel-list-item:hover {
+    background-color: $ui-hover-color;
 }
 
 $hover-darken: 10%;
