--- a/web/css/emu.scss
+++ b/web/css/emu.scss
@@ -21,14 +21,14 @@ $code-background-color: #eeeeee;
 
 $nav-width:         200px;
 
-$ui-background-color: #1E88E5;
-$ui-hover-color: #1565C0;
+$ui-background-color: #FF5722;
+$ui-hover-color: #E64A19;
 $ui-text-color: #EEEEEE;
 $ui-dark-text-color: #000000;
 
 $mpm-color: #1976D2;
 $robotron-dresden-color: #3F51B5;
-$robotron-riesa-color: #EF6C00;
+$robotron-riesa-color: #00C853;
 $sinclair-color: #0097A7;
 $amstrad-color: #E91E63;
 $acorn-color: #388E3C; 
