Webpage: started with fileloading panel

--- a/web/_includes/nav.html
+++ b/web/_includes/nav.html
@@ -18,6 +18,9 @@
             <li class="main-nav-item">
                 <div class="main-nav-link" onclick="nav_toggle();toggle_quickload_panel();">quickload...</div>
             </li>
+            <li class="main-nav-item">
+                <div class="main-nav-link" onclick="nav_toggle();toggle_load_panel();">load file...</div>
+            </li>
             {% if page.wasm == true %}
             <li class="main-nav-item">
                 <a class="main-nav-link" onclick="nav_toggle()" href="index.html">asm.js version</a>
