--- a/web/_sass/emu/_ui.scss
+++ b/web/_sass/emu/_ui.scss
@@ -1,4 +1,6 @@
-.floating-bottom {
+$hover-darken: 10%;
+
+.floating-bottom-left {
     position: absolute;
     left: 10px;
     bottom: 0;
@@ -50,12 +52,48 @@
     overflow-y: auto;
 }
 
+.panel-text-area {
+    background-color: $ui-background-color;
+    display: block;
+    cursor: default;    
+    padding: 5px;
+    border-radius: 5px;
+    font-family: "Arial", Gadget, sans-serif;
+    font-size: 12px;
+    color: $ui-text-color;
+    text-align: center;
+}
+
 .panel-list {
     margin: 5px;
 }
 
 .panel-list.hidden {
     display: none;
+}
+
+.panel-button-row {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    cursor: default;
+}
+
+.panel-button {
+    background-color: $ui-button-color;
+    display: inline-block;
+    cursor: pointer;
+    padding: 5px;
+    margin: 2px;
+    border-radius: 3px;
+    font-family: "Arial", Gadget, sans-serif;
+    font-size: 12px;    
+    color: $ui-text-color;
+    text-align: center;
+}
+
+.panel-button:hover {
+    background-color: darken($ui-button-color, $hover-darken);
 }
 
 .panel-list-item {
@@ -75,7 +113,6 @@
     background-color: $ui-hover-color;
 }
 
-$hover-darken: 10%;
 .panel-list-item.mpm {
     background-color: $mpm-color;
 }
