--- a/web/css/emu.scss
+++ b/web/css/emu.scss
@@ -25,6 +25,7 @@ $ui-background-color: #FF5722;
 $ui-hover-color: #E64A19;
 $ui-text-color: #EEEEEE;
 $ui-dark-text-color: #000000;
+$ui-button-color: #1976D2;
 
 $mpm-color: #1976D2;
 $robotron-dresden-color: #3F51B5;
