--- a/web/_includes/quicktoggles.html
+++ b/web/_includes/quicktoggles.html
@@ -1,4 +1,4 @@
-<div class='floating-bottom'>
+<div class='floating-bottom-left'>
     <div class='floating-button' id='ui_btn'  onclick='ui_toggle_ui()'>UI</div>
     <div class='floating-button' id='kbd_btn' onclick='ui_toggle_keyboard()'>KBD</div>
     <div class='floating-button' id='joy_btn' onclick='ui_toggle_joystick()'>JOY</div>
