--- a/web/_layouts/mainpage.html
+++ b/web/_layouts/mainpage.html
@@ -6,6 +6,7 @@
     {% include nav.html %}
     {% include systems-panel.html %}
     {% include quickload-panel.html %}
+    {% include load-panel.html %}
     <div class="game-border" id="game-border">
       <canvas class="game" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
     </div>
